--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Roboto;
+    font-family: Arial;
+    font-size: 16px;
 }
 
 .grid-container {
@@ -29,10 +30,64 @@ body {
 
 
 }
+
 .sidebar {
+    display: flex;
+    flex-direction: column;
     grid-area: sidebar;
     background-color: #0ea5e9;
+    color: white;
+    gap: 30px;
 }
 
 
 /* main grid layout */
+
+/*sidebar*/
+
+.dashboard-title {
+    color: white;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.dashboard-part{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+.dashboard-icon {
+    fill:white;
+    width: 3rem;
+    height: 3rem;
+}
+
+.icons {
+    fill: white;
+    width: 20px;
+    weight: 20px;
+
+}
+
+.dashboard-title {
+    font-size: 2rem;
+}
+
+.sidebar-options1,
+.sidebar-options2 {
+    display:flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.sidebar-options1 li,
+.sidebar-options2 li {
+    display:flex;
+    align-items: center;
+    gap: 15px;
+}
+
+
