--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial;
-    font-size: 16px;
+    font-family: 'Roboto', sans-serif;;
+
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 3fr; /* Automatically adjust row height */
     grid-template-areas:
         "sidebar header"
@@ -47,6 +47,7 @@ body {
 
 .dashboard-title {
     color: white;
+    font-size: 30px;
 }
 
 ul {
@@ -54,10 +55,12 @@ ul {
 }
 
 .dashboard-part{
+    padding-left: 20px;
+    padding-top: 20px;
     display:flex;
     flex-direction: row;
     align-items: center;
-    gap: 1rem;
+    gap: 10px;
 }
 .dashboard-icon {
     fill:white;
@@ -67,20 +70,19 @@ ul {
 
 .icons {
     fill: white;
-    width: 20px;
-    weight: 20px;
+    width: 23px;
+    weight: 23px;
 
 }
 
-.dashboard-title {
-    font-size: 2rem;
-}
+
 
 .sidebar-options1,
 .sidebar-options2 {
     display:flex;
     flex-direction: column;
     gap: 15px;
+    font-size: 20px;
 }
 
 .sidebar-options1 li,
