--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
     grid-area: header;
     background-color: white;
     color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 
 }
 
@@ -89,6 +92,120 @@ ul {
 .sidebar-options2 li {
     display:flex;
     align-items: center;
+    gap: 15px;
+}
+
+/* header part */
+
+.header-upper-part {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+
+}
+.avatar-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 25px;
+    margin-right: 40px;
+}
+
+.search-icon {
+    height: 20px;
+    width: 20px;
+}
+
+#search {
+    border: none;
+    outline: none;
+    width: 450px;
+    height: 30px;
+    background-color: #e5e7eb;
+    border-radius: 15px;
+    padding-left: 20px;
+}
+.ring-icon {
+    height: 20px;
+    width: 20px;
+}
+
+.shiba-icon {
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    border-radius: 100%;
+}
+
+.nickname {
+    color: black;
+}
+
+/* header bottom part */
+
+
+.header-bottom-part {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+
+}
+
+.header-left{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+
+}
+
+.header-bottom-part .shiba-icon {
+    height: 80px;
+    width: 80px;
+    object-fit: cover;
+    border-radius: 100%;
+}
+.introduction-text, .introduction-username {
+    color: black;
+    font-size: 1.2rem;
+}
+
+.btn {
+    background-color: #0ea5e9;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 30px;
+    border: none;
+    width: 100px;
+    height: 35px;
+
+
+}
+
+.introduction-container {
+    display: flex;
+    flex-direction: column;
+}
+.introduction-text {
+    font-size: 0.8rem;
+}
+
+.header-buttons {
+    display: flex;
+    flex-direction: row;
     gap: 15px;
 }
 
