--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ ul {
 
 .main-titles {
     font-family: 'Roboto', sans-serif;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 10px;
 }
 
@@ -298,9 +298,7 @@ p{
     font-size: 12px;
     color: #a0a0a5;
     font-family: 'Roboto', sans-serif;
-    font-weight: lighter;
-
-
+    font-weight: 300;
 }
 h3 {
     font-size: 12px;
@@ -311,6 +309,43 @@ h3 {
 }
 
 
+/* trending nav-bar */
+
+.trending-navbar {
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.trending-navbar li {
+    display:flex;
+    flex-direction: row;
+    gap: 8px;
+    justify-items: center;
+}
+
+.tag {
+    font-size: 12px;
+    color: black;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+.tag-food {
+
+    font-size: 12px;
+    color: #a0a0a5;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+.tag-container {
+    display: flex;
+    flex-direction: column;
+
+}
 
 
 
